netWorkPolicy/allow-all-ingress-traffic-in-namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-all-ingress-traffic-in-namespace
spec:
 podSelector: {}
 policyTypes:
  - Ingress
 ingress:
  - {}
