netWorkPolicy/deny all traffic from other namespaces.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
 namespace: secondary
 name: deny-from-other-namespaces
spec:
 podSelector: {}
 ingress:
  - from:
     - podSelector: {}
