netWorkPolicy/sample.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: test-network-policy
 namespace: default
spec:
 podSelector:
  matchLabels:
   role: db
 policyTypes:
  - Ingress
  - Egress
 ingress:
  - from:
     - ipBlock:
        cidr: 172.17.01/16
        except:
         - 172.17.02/16
     - namespaceSelector:
        matchLabels:
         project: One
     - podSelector:
        matchLabels:
         project: frontend
    ports:
     - protocol: TCP
       port: "6379"
egress:
  - to:
      - ipBlock:
        cidr: 10.0.0.0/24
  ports:
  - protocol: TCP
    port: 5978
